crates/kotlin-syntax/tests/snapshots/lexer_snapshots__backtick_identifier_in_string_interpolation.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"$`an identifier`"

TOKENS:
OPEN_QUOTE "\""
TEMPLATE_SHORT_START "$"
IDENTIFIER "`an identifier`"
CLOSE_QUOTE "\""
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
