crates/kotlin-syntax/tests/snapshots/lexer_snapshots__basic_function_and_vars.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
fun main() {
    val name = "Kotlin"
    var count = 42
}

TOKENS:
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "main"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "name"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "\""
STRING_CONTENT "Kotlin"
CLOSE_QUOTE "\""
NEWLINE "\n"
WHITESPACE "    "
VAR_KW "var"
WHITESPACE " "
IDENTIFIER "count"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "42"
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
