crates/kotlin-syntax/tests/snapshots/lexer_snapshots__leading_zero_error.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val x = 0123

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "0123"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
LexicalError { kind: LeadingZerosNotAllowed, range: 8..8 }
